--- a/public/template/user_profile.html
+++ b/public/template/user_profile.html
@@ -71,9 +71,7 @@
                    <div class="required">
                        <label><span>*</span>所在地</label>
                        <div class="content">
-                           <select name="">
-                             <option>请选择所在地</option>
-                           </select>
+                           <input name="text" type="text" class="text" value="上海" />
                        </div>
                    </div>
                    <div class="optional">
