1. Add User Agreement 2. Add Welcome Email
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,11 +1,15 @@
-<p>亲爱的iWine用户 <%= @resource.email %>：</p>
-<p>您在<%= @resource.reset_password_sent_at.to_s(:cn) %>提交了找回密码请求。请点击以下链接重置您的密码（链接24小时内有效） ：<br />
-<%= link_to edit_password_url(@resource, :reset_password_token => @resource.reset_password_token), edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %><br />
-（如果您无法点击这个链接，请将此链接复制到浏览器地址栏后访问）
-</p>
+<p><b>亲爱的<%= @resource.username %>：</b></p>
 
-<p>如果您没有提交找回密码请求，请忽略此邮件。</p>
+<p>你在iWine.com要求重设您的密码。请点击以下链接输入您新的密码：</p>
 
-<p>本邮件由系统自动发出，请勿回复。</p>
+<p>(如以上重设要求并非您本人发起，请忽略此邮件。）</p>
 
-<p>iWine爱红酒</p>
+<p><%= link_to edit_password_url(@resource, :reset_password_token => @resource.reset_password_token), edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+
+<p>如果您的email程序不支持链接点击，请将上面的地址拷贝至您的浏览器(例如IE、Chrome、Safari等)的地址栏进入iWine。</p>
+
+<p>感谢对iWine的支持，再次希望您的iWine的体验有益和愉快。</p>
+
+<p><b>--爱红酒（iWine.com）</b></p>
+
+<p>(这是一封系统自动产生的email，请勿回复。)</p>
