--- a/app/views/themes/waterfall/messages/unread.js.erb
+++ b/app/views/themes/waterfall/messages/unread.js.erb
@@ -1,5 +1,6 @@
 <% if @count > 0 %>
-$(".userbox").append("<%= escape_javascript(render('messages_count', :count => @count)) %>");
+	$(".userbox").find(".message_notice").remove();
+	$(".userbox").append("<%= escape_javascript(render('messages_count', :count => @count)) %>");
 <% end %>
 
 
