--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -170,8 +170,8 @@ a.icon_delet2 {background-position:0 -115px;height:13px;width:13px;}
 .follower a.icon_delet2 {position:absolute;left:160px;top:3px;}
 a.icon_cellar {background-position:0 -190px;height:10px;width:10px;}
 .icon_fb, .icon_tt, .icon_sina, .icon_fb_off, .icon_tt_off, .icon_sina_off {background:url(../images/icon/sns_link.gif) no-repeat ;display:block;float:left;height:23px;width:23px; text-indent:-9999px;}
-.icon_fb {background-position: 0 0;}
-.icon_tt {background-position:-28px 0;}
+.icon_tt {background-position: 0 0;}
+.icon_fb {background-position:-28px 0;}
 .icon_sina {background-position:-56px 0;}
 .icon_fb_off {background-position: 0 -27px;}
 .icon_tt_off {background-position:-28px -27px;}
