--- a/app/views/admin/wineries/_form.html.erb
+++ b/app/views/admin/wineries/_form.html.erb
@@ -21,7 +21,7 @@
       </tr>
       <tr>
         <td><label>官方网址</label></td>
-        <td><%= w.text_field :official_site %></td>
+        <td>http://<%= w.text_field :official_site %></td>
       </tr>
       <tr>
         <td><label>Email</label></td>
@@ -39,11 +39,11 @@
         <td><label>微博或博客网址</label></td>
         <td>
           <%= w.fields_for :config do |c| %>
-            <label>Twitter</label>
+            <label>Twitter http://</label>
             <%= c.text_field :Twitter, :value => @winery.config["Twitter"] %><br/><br/>
-            <label>Facebook</label>
+            <label>Facebook http://</label>
             <%= c.text_field :Facebook, :value => @winery.config["Facebook"] %><br/><br/>
-            <label>Sina</label>
+            <label>Sina http://</label>
             <%= c.text_field :Sina, :value => @winery.config["Sina"] %>
           <% end %>
         </td>
@@ -65,7 +65,7 @@
           <% end %>
         </td>
       </tr>
-      <%#= @info_items = @winery.info_items.blank? ? @winery.info_items.build : @winery.info_items %>
+      <tr><td></td><td><%= link_to_add_fields "再传一张", w, :photos %></td></tr>
       <%= w.fields_for :info_items do |item| %>
          <%= render "update_info_items", :item => item %>
       <% end %>
