--- a/app/views/admin/wineries/_photo.html.erb
+++ b/app/views/admin/wineries/_photo.html.erb
@@ -1,3 +1,3 @@
-<%= p.file_field :image %>
+<%= p.file_field :image %> <%=p.check_box :photo_type, {:value => 2} %>设为cover<%= p.check_box :_destroy %>删除
 <%= p.hidden_field :image_cache %>
 <%= p.hidden_field :album_id, :value => p.object.album_id %>
