--- a/app/views/themes/waterfall/wine_details/_special_comment.html.erb
+++ b/app/views/themes/waterfall/wine_details/_special_comment.html.erb
@@ -1,5 +1,5 @@
 <table id="special_comment_items" class="data_style1 mt10" width="400" border="0" cellpadding="0" cellspacing="0">
-  <% @register.special_comments.each do |s| %>
+  <% parent.special_comments.each do |s| %>
       <%next if s.name.blank? %>
       <tr>
         <td class="extra_attribute"><%=s.name %></td>
