--- a/app/views/themes/waterfall/settings/update_password.html.erb
+++ b/app/views/themes/waterfall/settings/update_password.html.erb
@@ -11,12 +11,12 @@
    <%= f.hidden_field :reset_password_token %>
    <div class="required">
      <label><span>*</span>当前密码</label>
-     <%= f.password_field :current_password, :class => "text name", :validate => { :presence => true} %>  
+     <%= f.password_field :current_password, :class => "text name" %>
    </div>
 
    <div class="required">
      <label><span>*</span>新密码</label>
-     <%= f.password_field :password, :class => "text name", :validate => { :presence => true, :confirmation => true } %>  
+     <%= f.password_field :password, :class => "text name" %>
    </div>
    <div class="required">
      <label><span>*</span>确认密码</label>
