--- a/public/template/album_photo_upload2.html
+++ b/public/template/album_photo_upload2.html
@@ -68,31 +68,34 @@
         	<div class="title_btn">
               <h1>上传照片<span class="font12"></span></h1>
             </div>
-            <p class="mb20">选择相册 
-              <select name="">
-              <option selected="selected">吃货那点事儿</option>
-              <option>植物也疯狂</option>
-              <option>小朋友们</option>
-              </select>
-              <a href="#" class="icon_add_album add_album">新建相册</a></p>
-            <p class="mb20"><input class="text mr5" name="" type="text" size="50" /><a href="album_photo_upload3.html" class="btn_gray mr5"><span>浏览</span></a></p>
-            <div class="uploade">
-            	<table width="100%" border="0" cellspacing="0" cellpadding="0">
-                  <tr>
-                    <td>image1.jpg</td>
-                    <td class="delet"><a href="#"><img src="images/icon/delet.gif" width="13" height="13" alt="删除" /></a></td>
-                  </tr>
-                  <tr>
-                    <td>image2.jpg</td>
-                    <td class="delet"><a href="#"><img src="images/icon/delet.gif" width="13" height="13" alt="删除" /></a></td>
-                  </tr>
-                  <tr>
-                    <td>image3.jpg</td>
-                    <td class="delet"><a href="#"><img src="images/icon/delet.gif" width="13" height="13" alt="删除" /></a></td>
-                  </tr>
-                </table>
-            </div>
-            <p><a href="album_photo_upload2.html" class="btn_gray mr5"><span>开始上传</span></a><a href="#" class="btn_gray"><span>	取消</span></a></p>
+       	    <ul class="uploade_done clearfix">
+                	<li>
+                    	<div class="thumb">
+                            <img src="images/test/pic190_1.jpg" width="100" height="70" />
+                            <p><a class="float_r" href="#"><img src="images/icon/delet.gif" alt="删除照片" width="13" height="13" align="absmiddle" /></a>
+                            <input name="" type="radio" value="" /> 设为封面</p>
+                      </div>
+                        <div class="des"><textarea class="text" name="" cols="" rows="" placeholder="描述"></textarea></div>
+                    </li>
+                    <li>
+                    	<div class="thumb">
+                            <img src="images/test/pic190_1.jpg" width="100" height="70" />
+                            <p><a class="float_r" href="#"><img src="images/icon/delet.gif" alt="删除照片" width="13" height="13" align="absmiddle" /></a>
+                            <input name="" type="radio" value="" /> 设为封面</p>
+                        </div>
+                        <div class="des"><textarea class="text" name="" cols="" rows="" placeholder="描述"></textarea></div>
+                    </li>
+                    <li>
+                    	<div class="thumb">
+                            <img src="images/test/pic190_1.jpg" width="100" height="70" />
+                            <p><a class="float_r" href="#"><img src="images/icon/delet.gif" alt="删除照片" width="13" height="13" align="absmiddle" /></a>
+                            <input name="" type="radio" value="" /> 设为封面</p>
+                        </div>
+                        <div class="des"><textarea class="text" name="" cols="" rows="" placeholder="描述"></textarea></div>
+                    </li>
+                    <div class="clear"></div>
+                </ul>
+           	<p class="align_c mt30"><a href="#" class="btn_gray mr5"><span>保存</span></a></p>
         <!--<p class="gray">提示：每次最多可以批量上传二十张照片，按着 “command” 键可以一次选择多张照片</p>-->
         </div>
         <div class="clear"></div>
