--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -417,4 +417,4 @@ div.pagination span.disabled {padding-right: 6px; padding-left: 6px; padding-bot
 #stylized .field_with_errors label.message {padding:5px;background: none repeat scroll 0 0 #FBE3E4;color: #8A1F11;display:inline;float:none;}
 
 /*------search dropdown------*/
-.ui-autocomplete {background-color:#fff;padding:5px;border:1px solid #ccc;}
+.ui-autocomplete {background-color:#fff;padding:5px;border:1px solid #ccc;position:absolute;}
