--- a/app/views/themes/waterfall/comments/_comment_form.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_form.html.erb
@@ -3,7 +3,7 @@
 <% else %>
 <h3 class="title"> 我要评论 </h3>
 <% end %>
-<%= form_for [comment],  :validate => true do |f| -%>
+<%= form_for [comment],  :validate => true, :html => {:id => "do_#{comment.do}_form"} do |f| -%>
 <%= f.hidden_field :do %>
 <div class="star_rate" id="wine_profile_star_bar">
   <table border="0" cellspacing="5" cellpadding="5">
@@ -27,13 +27,14 @@
     <%= f.text_area :body,  :rows => 10, :cols => 25 %>
   </div>
   <div class="share relative">
-      <%= link_to "javascript:void(0)", :class => "btn_gray float_r", :onclick => "$(this).parents('form').submit()" do  %>
+      <%= link_to "javascript:void(0)", :class => "btn_gray float_r do_#{comment.do}_button" do  %>
         <span>保存</span>
       <% end %>
-      <a href="#" class="btn_gray float_r"></a>
+      
       分享到<%= f.check_box :is_share, :checked => current_user.profile.config.share.wine_simple_comment.to_i == 1 %> 广播
-  </div>
 
+  </div>
+  <span class="red text_error" style="display: block; float: right; margin-right: 20px"></span>
 <% end -%>
 
 <script type="text/template" id="star_item">
