--- a/app/views/themes/waterfall/comments/_comment_list.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_list.html.erb
@@ -46,82 +46,40 @@
 		<div class="clear"></div>
 		
 		<div class="comment_post_star mt30">
-			<% if user_signed_in? %>
-			<%= form_for [@commentable, @comment], :validate => true do |f| -%>
-			<%= f.hidden_field :do %>
-			<%= hidden_field_tag "return_url", request.fullpath %>
-			<a name="01" id="01"></a>
-
-			<div class="evaluate">
-				<% #图片不需要评星 %>
-				<% unless @comment.commentable_type == "Photo"   %>
-					想给个评价么？
-					<div class="star_rate" id="wine_profile_star_bar">
-						<ul id="stars">
-						</ul>
-						<input type="hidden" name="rate_value" value=<%= @comment.point || 0 %> />
-					</div>
-					<div class="clear"></div>
-					<!-- <span class="text_value"></span> -->
-
-					<script type="text/template" id="star_item">
-	 				 <%= image_tag 'base/star_gray.gif', :width => 15, :height => 14 %>
-			   	</script>
-				<% end %>
-				<div class="clear"></div>
-				<a href="javascript:void(0)" class="btn_gray submit"><span>加上去</span></a>
-			</div>
-		  	<% unless @comment.commentable_type == "Photo"   %>
-		  		<%= theme_javascript_include_tag :star_rate %>
-		  	<% end %>
-			<div class="userpic">
-				 <%= link_to_user @user, 
-				                  user_path(@user, :trailing_slash => true),  
-				                  {:with_avatar => true, :avatar_version => :middle},  
-				                  {:width => 50, :height => 50} %>     
-			</div>
-			<div class="post_main">
-				<div class="post">
-					<%= f.text_area :body,  :class => [:mb10, :comment_body] %>
-				</div>
-			</div>
-			<div class="clear"></div>
-			<% end %>
-
-			<% else %>
-			<p><%= link_to "登录发表评论", login_path() %></p>
-			<% end %>
+			<%= render "comments/share/form" %>
 		</div>
 
 
 <script type="text/javascript">
   $(document).ready(function(){
-  // "有用" 成功时，更新有用的数量
-  $("a.vote").bind("ajax:success", function(event, data, textStatus, jqXHR){
-    $(this).find("span.likes_count").text(data);
-  });
-  // 回复按钮
-  $("a.reply_comment_button").click(function(){
-  // $(".reply_comment_outer").html("");
-  });
-  $("a.reply_comment_button").bind("ajax:success", function(event, data, textStatus, jqXHR){
-  $comment_outer = $(this).parent().parent().children(".replybox");
+	  // "有用" 成功时，更新有用的数量
+	  $("a.vote").bind("ajax:success", function(event, data, textStatus, jqXHR){
+	    $(this).find("span.likes_count").text(data);
+	  });
+	  // 回复按钮
+	  $("a.reply_comment_button").click(function(){
+		  // $(".reply_comment_outer").html("");
+		  // Close All Reply Form
+		  $(".comment_list li").find(".replybox").html('');
+	  });
 
-  if($comment_outer.is(":hidden")){
-  	$comment_outer.slideDown("slow");
-  }
-  else
-  {
-  	$comment_outer.slideUp("slow");
-  }
-  });
+	  $("a.reply_comment_button").bind("ajax:success", function(event, data, textStatus, jqXHR){
+		  $comment_outer = $(this).parent().parent().children(".replybox");
+		  if($comment_outer.is(":hidden")){
+		  	$comment_outer.show();
+		  }
+		  else
+		  {
+		  	$comment_outer.hide();
+		  }
+	  });
 
-	<% #图片不需要评星 %>
-	<%  unless @comment.commentable_type == "Photo"   %>
-	  window.StarApp = new StarsView({el:$("#wine_profile_star_bar")});
-			  		StarApp.itemView = new StarItemView();
-			  		StarApp.setDefaultRateStar();
-	<% end %>
+		<% #图片不需要评星 %>
+		<%  unless @comment.commentable_type == "Photo"   %>
+		  window.StarApp = new StarsView({el:$("#wine_profile_star_bar")});
+				  		StarApp.itemView = new StarItemView();
+				  		StarApp.setDefaultRateStar();
+		<% end %>
 
   });
 </script>
