--- a/app/views/themes/waterfall/comments/reply.js.erb
+++ b/app/views/themes/waterfall/comments/reply.js.erb
@@ -6,6 +6,7 @@ $("#reply_comment_<%= @comment.id %>")
 $("#reply_comment_<%= @comment.id %> form")
 .bind("ajax:success", function(evt, data, status, xhr){
   self = this;
+  $(this).find("textarea").val("");
   // $(this).parent().parent().slideUp("slow", function(){});
   // $(this).parent().children('.reply_list').slideUp("slow");
   $(this).parent().children('.reply_list').slideDown("slow", function () {
@@ -21,3 +22,9 @@ $("#reply_comment_<%= @comment.id %> form")
   // .children(".userful")
   // .find("span.reply_result").text("回复成功.");
 });
+
+
+ <%= render :partial => "comments/share/validator.js" %>
+     $(function(){
+       window.commentFormView = new CommentFormView({el: "#reply_comment_<%= @comment.id %> form"});
+ });
