notice_stickie 去掉‘close'关闭标签 更新提示信息； 增加免责声明模版

--- a/app/views/themes/waterfall/layouts/_footer.html.erb
+++ b/app/views/themes/waterfall/layouts/_footer.html.erb
@@ -5,6 +5,7 @@
 						# :help => '/help', 
 						:private => '/private',
 						:agreement => '/agreement',
+                        :terms_and_conditions => '/terms_and_conditions',
 						# :site_map => '/site_map',
 						:feedback => '/feedback'} %>
 		<%= raw foot_nav.collect { |k, v| link_to t("nav.#{k}"), v }.join(" | ") %>
