--- a/app/views/themes/waterfall/layouts/application.html.erb
+++ b/app/views/themes/waterfall/layouts/application.html.erb
@@ -36,7 +36,7 @@
       <% else %>
       <div id="wrapper950">
       <% end %>
-        <%= render_stickies %>
+        <%= render_stickies(:close => "") %>
         <%= yield %>
       </div>
       <%= render "layouts/footer" %>
