bugfixed 用户profile 头像模糊问题 酒庄评论列条页面css问题

--- a/app/views/themes/waterfall/users/share/_follower_list.html.erb
+++ b/app/views/themes/waterfall/users/share/_follower_list.html.erb
@@ -3,11 +3,11 @@
 <span>
   <% if index > 0 %>
   <%= link_to_user user, user_path(user.id, :trailing_slash => true), 
-  {:with_avatar => true, :avata_version => :middle},
+  {:with_avatar => true, :avatar_version => :middle},
   {:width => 50, :height => 50, :alt => user.username} %>
   <% else %>
   <%= link_to_user user, user_path(user.id, :trailing_slash => true), 
-  {:with_avatar => true, :avata_version => :large},
+  {:with_avatar => true, :avatar_version => :large},
   {:width => 101, :height => 101, :alt => user.username} %>
   <% end %>
 </span>
