--- a/app/views/themes/waterfall/comments/winery_comments_list.html.erb
+++ b/app/views/themes/waterfall/comments/winery_comments_list.html.erb
@@ -16,6 +16,7 @@
            <%= link_to "", :class => "btn_gray float_r mr5" do %>
             <span>添加评论</span>
            <% end %>
+           <h2>所有评论<span class="font12 more">(共<%= @winery.comments_count %>条...)</span></h2>
          </div>
          
          <div class="content">
