--- a/public/template/album_photo_upload.html
+++ b/public/template/album_photo_upload.html
@@ -75,7 +75,7 @@
               <option>小朋友们</option>
               </select>
               <a href="#" class="icon_add_album add_album">新建相册</a></p>
-            <p class="mb20"><input class="text mr5" name="" type="text" size="50" /><a href="album_photo_upload3.html" class="btn_gray mr5"><span>浏览</span></a></p>
+            <p class="mb20"><input class="text mr5" name="" type="text" size="50" /><a href="album_photo_upload3.html" class="btn_blue_b mr5"><span>选择图片</span></a></p>
             <div class="uploade">
             	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
