--- a/app/views/themes/waterfall/wine_details/share/_photos.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_photos.html.erb
@@ -1,6 +1,6 @@
 <div class="title_btn">
   
-  <%= link_to  upload_albums_path(:wine_id => @wine_detail.id ), :class => [:btn_gray, :float_r] do %>
+  <%= link_to  new_photo_path(:wine_id => @wine_detail.id ), :class => [:btn_gray, :float_r] do %>
 	  <span>添加照片</span>
 	<% end %>
 	<h2>
