--- a/app/views/themes/waterfall/albums/upload_list.html.erb
+++ b/app/views/themes/waterfall/albums/upload_list.html.erb
@@ -1,40 +1,50 @@
 <div class="whitespace">
-<div id="hp" >
+<div id="hp" class="min_height" >
 <%= render "users/sub_nav", :action => params[:action] %>
 <div class="clear"></div>
 
 <div id="cu_user_menu" class="clearfix">
-  <span class="f14">《 <a href="community_albmu_list.html">返回相册首页</a></span>
+  <span class="f14">《 <%= link_to "返回相册首页", albums_user_path(current_user) %> </span>
 </div>
-<div class="title_btn clearfix">
-  <h2>完成上传 - 添加描述</h2>
-</div>
-  <ul class="photo_list">
-<%= form_tag '/albums/save_upload_list', :id => 'save_upload_list_form' do %>
-  <% @photos.each do |photo| %>
-  <li class="photo_des" id="upload_photo_div_<%= photo.id %>" >
-    <%= image_tag photo.image_url :thumb %>
-    <p>描述</p>
-    <p>
-      <textarea class="photo_des" name="photo[<%= photo.id %>]" cols="" rows=""><%= photo.intro %></textarea>
-    </p>
-    <p>
-      <%= link_to "删除", delete_photo_albums_path(:photo_id => photo.id), :class => "fancybox_delete_photo fancybox.ajax btn_delete float_r" %>
-      <label>
-        <input class="radio" name="cover_id" type="radio" value="<%= photo.id %>" /> 
-        设为封面 
-      </label>
-    </p>
-  </li>
-  <% end %>
-  </ul>
-  <div class="clear"></div>
-  <div class="align_c"><a href="javascript:save();" class="btn_gray button_gray"><span>保存</span></a></div>
-</div>
-<input type="hidden" name="id" value="<%= params[:id] %>"/>
-<input type="hidden" name="deleted_ids" id="deleted_photo_ids"/>
+<div class="content">
+  <div class="album_left">
+    <div class="title_btn">
+     <h1>完成上传 - 添加描述<span class="font12"></span></h1>
+   </div>
+   <%= form_tag '/albums/save_upload_list', :id => 'save_upload_list_form' do %>
+     <ul class="uploade_done clearfix">
+      <% @photos.each do |photo| %>
+      <li id="upload_photo_div_<%= photo.id %>">
+        <div class="thumb">
+          <%= image_tag photo.image_url :thumb_x %>
+          <p>
+             <%= link_to delete_photo_albums_path(:photo_id => photo.id), :class => "fancybox_delete_photo fancybox.ajax btn_delete float_r" do %>
+               <%= theme_image_tag "icon/delet.gif", :alt => "删除照片", :size => "13x13", :align => "absmiddle" %>
+             <% end %>
+              <%= radio_button_tag "cover_id", photo.id, false, :class => "radio" %>
+              设为封面 
+          </p>
+          </div>
 
-<% end %>
+          <div class="des">
+            <textarea class="photo_des" name="photo[<%= photo.id %>]" cols="" rows="" placeholder="描述"><%= photo.intro %></textarea>
+          </div>
+        </li>
+        <% end %>
+        <div class="clear"></div>
+      </ul>
+      <%= hidden_field_tag "id", params[:album_id] %>
+      <%= hidden_field_tag "deleted_ids", '', :id => "deleted_photo_ids" %>
+      <div class="align_c mt30"><a href="javascript:save();" class="btn_gray button_gray"><span>保存</span></a></div>
+    <% end %>
+   <!-- end album_left -->
+ </div> 
+ <!-- end content  -->
+</div>
+
+<div class="clear"></div>
+
+
 <script type="text/javascript">
 var deleted_ids = [];
 
