--- a/app/views/themes/waterfall/photos/new.html.erb
+++ b/app/views/themes/waterfall/photos/new.html.erb
@@ -46,7 +46,7 @@
                 <span>取消上传</span>
               </button>
           </a>
-  
+      
         </div>
         <div class="span5">
           <!-- The global progress bar -->
@@ -57,6 +57,8 @@
       </div>
       <!-- The loading indicator is shown during image processing -->
       <div class="fileupload-loading">....</div>
+      <%= hidden_field_tag "wine_id", params[:wine_id] %>
+      <%= hidden_field_tag "winery_id", params[:winery_id] %>
       <% end %>
       <script>
 
