--- a/public/template/feedback_success.html
+++ b/public/template/feedback_success.html
@@ -40,7 +40,7 @@
     <div id="wrapper950">
     	<div class="whitespace about">
           <h1 class="main_title">意见反馈</h1>
-          <div class="success">提交成功，感谢您的支持！您的建议将帮助我们不断完善爱红酒（iWIne）的产品与服务。</div>
+          <div class="success">提交成功，感谢您的支持！您的建议将帮助我们不断完善爱红酒（iWine）的产品与服务。</div>
           <div class="align_c mt30"><a href="#" class="btn_gray_b"><span>返回</span></a></div>
    	  </div>
     </div>
