Update Message mailer template
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/message_mailer/reply_message_email.html.erb
+++ b/app/views/message_mailer/reply_message_email.html.erb
@@ -4,12 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1><%= @message.sender.username %> 回复了你的消息。</h1>
-    <blockquote>
-      <p>
-        <%= raw @message.body %>
-      </p>
-    </blockquote>
+    <p><%= @message.sender.username %> 回复了你的消息。</p>
     <p>
      访问 <%= link_to root_url + conversations_path,root_url + conversations_path %> 查看回复消息.
     </p>
