--- a/app/views/message_mailer/reply_message_email.html.erb
+++ b/app/views/message_mailer/reply_message_email.html.erb
@@ -8,5 +8,8 @@
     <p>
      访问 <%= link_to root_url + conversations_path,root_url + conversations_path %> 查看回复消息.
     </p>
+    <p><b>--爱红酒（iWine.com）</b></p>
+
+<p>(这是一封系统自动产生的email，请勿回复。)</p>
   </body>
 </html>
