Bugs: Fixed About assets Precombile
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/themes/waterfall/settings/avatar.html.erb
+++ b/app/views/themes/waterfall/settings/avatar.html.erb
@@ -1,6 +1,6 @@
 <% content_for :css do  %>
 <%= theme_stylesheet_link_tag "setting" %>
-<%= stylesheet_link_tag :jcrop %>
+<%= theme_stylesheet_link_tag :jcrop %>
 <% end %>
 <div id="wrapper950">
   <div class="whitespace setting">
