--- a/app/views/themes/waterfall/settings/basic.html.erb
+++ b/app/views/themes/waterfall/settings/basic.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= javascript_include_tag 'region_china' %>
+<%#= javascript_include_tag 'region_china' %>
 <% content_for :css do  %>
 <%= theme_stylesheet_link_tag "setting" %>
 <% end %>
